# OpenCVPractice

./: CMakeLists.txt  OpenCVPractice.cpp
